--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <widget class="QStackedWidget" name="MainWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -10,194 +10,216 @@
     <height>320</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <pointsize>14</pointsize>
+   </font>
+  </property>
+  <property name="cursor">
+   <cursorShape>BlankCursor</cursorShape>
+  </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>StackedWidget</string>
   </property>
-  <property name="autoFillBackground">
-   <bool>false</bool>
+  <property name="currentIndex">
+   <number>2</number>
   </property>
-  <property name="styleSheet">
-   <string notr="true">background-image: url(:/images/splash.png);
-</string>
-  </property>
-  <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="pbEmrgStop">
+  <widget class="QWidget" name="pgMainWindow">
+   <widget class="QPushButton" name="pbResearch">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>30</y>
-      <width>81</width>
-      <height>70</height>
+      <x>20</x>
+      <y>20</y>
+      <width>201</width>
+      <height>81</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>Noto Mono</family>
-      <pointsize>16</pointsize>
-      <italic>false</italic>
+      <pointsize>14</pointsize>
      </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>BlankCursor</cursorShape>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
     </property>
-    <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 127);
-</string>
-    </property>
     <property name="text">
-     <string>Стоп!</string>
+     <string>Исследования</string>
+    </property>
+    <property name="default">
+     <bool>true</bool>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="pbShutdown">
+   <widget class="QPushButton" name="pbSettings">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>210</y>
-      <width>81</width>
-      <height>70</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Noto Mono</family>
-      <pointsize>16</pointsize>
-     </font>
-    </property>
-    <property name="focusPolicy">
-     <enum>Qt::NoFocus</enum>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 127);</string>
-    </property>
-    <property name="text">
-     <string>Выход</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pbTable">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
-      <y>30</y>
-      <width>81</width>
-      <height>70</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Noto Mono</family>
-      <pointsize>16</pointsize>
-      <italic>false</italic>
-     </font>
-    </property>
-    <property name="focusPolicy">
-     <enum>Qt::NoFocus</enum>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 127);
-</string>
-    </property>
-    <property name="text">
-     <string>Стол</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pbExpMenu">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
+      <x>20</x>
       <y>120</y>
-      <width>81</width>
-      <height>70</height>
+      <width>201</width>
+      <height>81</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>Noto Mono</family>
-      <pointsize>16</pointsize>
-      <italic>false</italic>
+      <pointsize>14</pointsize>
      </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>BlankCursor</cursorShape>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
     </property>
-    <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 127);</string>
-    </property>
     <property name="text">
-     <string>Опыты</string>
+     <string>Настройка системы</string>
+    </property>
+    <property name="default">
+     <bool>true</bool>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
     </property>
    </widget>
+   <widget class="QPushButton" name="pbInformation">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>220</y>
+      <width>201</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>BlankCursor</cursorShape>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
+    <property name="text">
+     <string>Информация</string>
+    </property>
+    <property name="autoDefault">
+     <bool>false</bool>
+    </property>
+    <property name="default">
+     <bool>true</bool>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QWidget" name="pgInformation"/>
+  <widget class="QWidget" name="pgSettings">
    <widget class="QPushButton" name="pbCamera">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>210</y>
-      <width>81</width>
-      <height>70</height>
+      <x>20</x>
+      <y>20</y>
+      <width>201</width>
+      <height>41</height>
      </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Noto Mono</family>
-      <pointsize>16</pointsize>
-     </font>
-    </property>
-    <property name="focusPolicy">
-     <enum>Qt::NoFocus</enum>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 127);</string>
     </property>
     <property name="text">
      <string>Камера</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pbNetSettings">
+   <widget class="QLabel" name="lbSetLabel">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>120</y>
-      <width>81</width>
-      <height>71</height>
+      <x>10</x>
+      <y>0</y>
+      <width>181</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>Noto Mono</family>
-      <pointsize>16</pointsize>
-      <italic>false</italic>
+      <pointsize>8</pointsize>
      </font>
     </property>
-    <property name="focusPolicy">
-     <enum>Qt::NoFocus</enum>
+    <property name="text">
+     <string>Вкладка настроек - временная</string>
     </property>
-    <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 127);</string>
+   </widget>
+   <widget class="QPushButton" name="pbEmrgStop">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>70</y>
+      <width>201</width>
+      <height>41</height>
+     </rect>
     </property>
     <property name="text">
-     <string>Сеть</string>
+     <string>Остановить !</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pbExpMenu">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>120</y>
+      <width>201</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Эксперимент</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pbNetSettings">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>220</y>
+      <width>201</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Параметры сети</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pbTable">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>170</y>
+      <width>201</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Извлечь планшет</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pbMainWindow">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>270</y>
+      <width>201</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Главное меню</string>
     </property>
    </widget>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
+  <widget class="QWidget" name="pgResearch"/>
  </widget>
- <layoutdefault spacing="6" margin="11"/>
  <resources/>
- <connections>
-  <connection>
-   <sender>pbShutdown</sender>
-   <signal>clicked()</signal>
-   <receiver>MainWindow</receiver>
-   <slot>close()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>120</x>
-     <y>245</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>119</x>
-     <y>159</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
