--- a/networksettings.ui
+++ b/networksettings.ui
@@ -22,6 +22,9 @@
      <height>21</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
+   </property>
    <property name="text">
     <string>Динамический IP</string>
    </property>
@@ -34,6 +37,9 @@
      <width>61</width>
      <height>21</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
    </property>
    <property name="text">
     <string>LAN</string>
@@ -48,6 +54,9 @@
      <height>21</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
+   </property>
    <property name="text">
     <string>Wi-Fi</string>
    </property>
@@ -61,6 +70,9 @@
      <height>61</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
+   </property>
    <property name="title">
     <string>Wi-Fi mode</string>
    </property>
@@ -72,6 +84,9 @@
       <width>100</width>
       <height>21</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>BlankCursor</cursorShape>
     </property>
     <property name="text">
      <string>&amp;AP</string>
@@ -85,6 +100,9 @@
       <width>100</width>
       <height>21</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>BlankCursor</cursorShape>
     </property>
     <property name="text">
      <string>&amp;Station</string>
@@ -100,6 +118,9 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
+   </property>
    <property name="text">
     <string>0</string>
    </property>
@@ -112,6 +133,9 @@
      <width>16</width>
      <height>16</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
    </property>
    <property name="text">
     <string>IP:</string>
@@ -126,6 +150,9 @@
      <height>16</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
+   </property>
    <property name="text">
     <string>GW:</string>
    </property>
@@ -138,6 +165,9 @@
      <width>71</width>
      <height>16</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
    </property>
    <property name="text">
     <string>DNS:</string>
@@ -152,8 +182,17 @@
      <height>41</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
+   </property>
    <property name="text">
     <string>Accept</string>
+   </property>
+   <property name="default">
+    <bool>true</bool>
+   </property>
+   <property name="flat">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="pbExit">
@@ -165,8 +204,17 @@
      <height>41</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
+   </property>
    <property name="text">
     <string>Exit</string>
+   </property>
+   <property name="default">
+    <bool>true</bool>
+   </property>
+   <property name="flat">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QLineEdit" name="lnAddr_2">
@@ -177,6 +225,9 @@
      <width>31</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
    </property>
    <property name="text">
     <string>0</string>
@@ -191,6 +242,9 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
+   </property>
    <property name="text">
     <string>0</string>
    </property>
@@ -203,6 +257,9 @@
      <width>31</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
    </property>
    <property name="text">
     <string>0</string>
@@ -217,6 +274,9 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
+   </property>
    <property name="text">
     <string>32</string>
    </property>
@@ -229,6 +289,9 @@
      <width>16</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
    </property>
    <property name="text">
     <string> .</string>
@@ -243,6 +306,9 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
+   </property>
    <property name="text">
     <string> .</string>
    </property>
@@ -255,6 +321,9 @@
      <width>16</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
    </property>
    <property name="text">
     <string> .</string>
@@ -269,6 +338,9 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
+   </property>
    <property name="text">
     <string> /</string>
    </property>
@@ -281,6 +353,9 @@
      <width>16</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
    </property>
    <property name="text">
     <string> .</string>
@@ -295,6 +370,9 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
+   </property>
    <property name="text">
     <string>0</string>
    </property>
@@ -307,6 +385,9 @@
      <width>16</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
    </property>
    <property name="text">
     <string> .</string>
@@ -321,6 +402,9 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
+   </property>
    <property name="text">
     <string> .</string>
    </property>
@@ -333,6 +417,9 @@
      <width>31</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
    </property>
    <property name="text">
     <string>0</string>
@@ -347,6 +434,9 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
+   </property>
    <property name="text">
     <string>0</string>
    </property>
@@ -359,6 +449,9 @@
      <width>31</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
    </property>
    <property name="text">
     <string>0</string>
@@ -373,6 +466,9 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
+   </property>
    <property name="text">
     <string> .</string>
    </property>
@@ -385,6 +481,9 @@
      <width>31</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
    </property>
    <property name="text">
     <string>0</string>
@@ -399,6 +498,9 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
+   </property>
    <property name="text">
     <string> .</string>
    </property>
@@ -411,6 +513,9 @@
      <width>31</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
    </property>
    <property name="text">
     <string>0</string>
@@ -425,6 +530,9 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
+   </property>
    <property name="text">
     <string> .</string>
    </property>
@@ -437,6 +545,9 @@
      <width>31</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
    </property>
    <property name="text">
     <string>0</string>
@@ -451,6 +562,9 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
+   </property>
    <property name="text">
     <string>0</string>
    </property>
@@ -464,6 +578,9 @@
      <height>23</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
+   </property>
   </widget>
   <widget class="QLabel" name="label_11">
    <property name="geometry">
@@ -473,6 +590,9 @@
      <width>41</width>
      <height>16</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
    </property>
    <property name="text">
     <string>SSID:</string>
@@ -487,6 +607,9 @@
      <height>16</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
+   </property>
    <property name="text">
     <string>KEY:</string>
    </property>
@@ -499,6 +622,9 @@
      <width>81</width>
      <height>23</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
    </property>
    <property name="text">
     <string/>
@@ -513,6 +639,9 @@
      <height>23</height>
     </rect>
    </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
+   </property>
    <property name="text">
     <string/>
    </property>
@@ -525,6 +654,9 @@
      <width>31</width>
      <height>16</height>
     </rect>
+   </property>
+   <property name="cursor">
+    <cursorShape>BlankCursor</cursorShape>
    </property>
    <property name="text">
     <string>Enc:</string>
